# openpose-android-demo

./: AndroidManifest.xml  build.gradle
Vim3_npu/: ijk  settings.gradle
Vim3_npu/app/: CMakeLists.txt  build.gradle  maindexlist.txt
Vim3_npu/app/src/main/: AndroidManifest.xml
Vim3_npu/app/src/main/assets/: nbg_meta.json
Vim3_npu/app/src/main/cpp/include/applib/ovxinc/include/utils/: vsi_nn_dtype_util.h
Vim3_npu/app/src/main/cpp/openpose/: ChunkF.cpp  ChunkF.h  JNIBridge.cpp  JNIBridge.h  NNHApi.cpp  NNHApi.h  and_log.h  java_env.cpp  main.c  vnn_global.h  vnn_mobilenetv1tfite.c  vnn_mobilenetv1tfite.h  vnn_post_process.c  vnn_pre_process.c  vnn_pre_process.h
Vim3_npu/app/src/main/java/com/heaven7/android/vim3_npu/: App.java  MainActivity.java  OpenposeApiFactory.java  OpenposeDetector.java
Vim3_npu/app/src/main/res/layout/: activity_main.xml
Vim3_npu/app/src/main/res/values/: strings.xml
Vim3_npu/gradle/wrapper/: gradle-wrapper.properties
Vim3_npu/ncross_namespace/: CMakeLists.txt  build.gradle
Vim3_npu/ncross_namespace/src/main/: AndroidManifest.xml
Vim3_npu/ncross_namespace/src/main/cpp/: fake_linker.c  fake_linker.h  gtype.h  linked_list.h  native-lib.c  native-lib.h  soinfo.h  test_soinfo.cpp  test_soinfo.h
Vim3_npu/ncross_namespace/src/main/java/com/beichen/fakelinker/: DynTestClass.java  MainActivity.java
Vim3_npu/ncross_namespace/src/main/res/layout/: activity1.xml
Vim3_npu/openpose_api/: build.gradle
Vim3_npu/openpose_api/src/main/: AndroidManifest.xml
Vim3_npu/vim3_npu/: CMakeLists.txt  build.gradle
Vim3_npu/vim3_npu/src/main/: AndroidManifest.xml
Vim3_npu/vim3_npu/src/main/assets/: nbg_meta.json
Vim3_npu/vim3_npu/src/main/cpp/include/service/ovx_inc/VX/: vx_types.h
Vim3_npu/vim3_npu/src/main/cpp/openpose/: ChunkF.cpp  ChunkF.h  JNIBridge.cpp  JNICC.cpp  JNICC.h  NNHApi.cpp  NNHApi.h  OpenposeOut.h  Pair.h  and_log.h  java_env.cpp  java_env.h  vnn_global.h  vnn_mobilenetv1tfite.c  vnn_post_process.c  vnn_post_process.h  vnn_pre_process.c
Vim3_npu/vim3_npu/src/main/cpp/openpose/ext/: Array.h
Vim3_npu/vim3_npu/src/main/java/com/heaven7/android/vim3/npu/: BodyPart.java  ContextHelper.java  NOpenposeOut.java  NpuOpenpose.java
openpose-android-demo/: AndroidManifest.xml  build.gradle  note.txt
openpose-android-demo/jni/: imageutils_jni.cc
openpose-android-demo/src/com/ricardotejo/openpose/: CameraActivity.java  LegacyCameraConnectionFragment.java
openpose_test/: build.gradle  common.gradle  settings.gradle
openpose_test/app/: build.gradle
openpose_test/app/libs/: vim3_npu-debug.aar  vim3_npu-release.aar
openpose_test/app/src/main/: AndroidManifest.xml
openpose_test/app/src/main/res/layout/: ac_entry.xml  activity_main.xml
openpose_test/app/src/main/res/values/: strings.xml
openpose_test/app/src/test/java/: TestOut.java
openpose_test/app/src/test/java/com/heaven7/test/: TestOut.java
openpose_test/gradle/wrapper/: gradle-wrapper.properties
openpose_test/lib_openpose/: CMakeLists.txt  build.gradle
openpose_test/lib_openpose/libs/: openpose_api-release.aar
openpose_test/lib_openpose/src/main/: AndroidManifest.xml
openpose_test/lib_openpose/src/main/res/layout/: activity_camera.xml  camera_connection_fragment.xml
openpose_test/lib_openpose/src/main/res/values/: strings.xml
src/com/ricardotejo/openpose/: CameraActivity.java  MocapActivity.java
(+70 files in other folders)
